cmake_minimum_required(VERSION 3.14)
project(DailyCodingProblem C)

set(CMAKE_C_STANDARD 11)

add_executable(DailyCodingProblem src/main.c src/day40.c src/day40.h src/day41.c src/day41.h src/day42.c src/day42.h src/day43.c src/day43.h src/day44.c src/day44.h src/day45.c src/day45.h src/day46.c src/day46.h)