cmake_minimum_required(VERSION 3.14)
project(DailyCodingProblem C)

set(CMAKE_C_STANDARD 11)

add_executable(DailyCodingProblem src/main.c src/day60.c src/day60.h src/day61.c src/day61.h src/day62.c src/day62.h src/day63.c src/day63.h src/day63.c src/day63.h src/day64.c src/day64.h src/day64.c src/day64.h src/day65.c src/day65.h)